tests/fixtures/errors/use_after_move.full
error[E0200]: cannot use 'a' after ownership transfer
 --> use_after_move.z:5:8
   5 |     c: a
     |         ^
     = note: this name no longer owns a value; it was moved earlier
1 error found
